--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,13 @@ configurations {
 
 dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.21'
+
 	compile 'org.springframework:spring-webmvc:3.2.9.RELEASE'
 	compile 'org.springframework:spring-tx:3.2.9.RELEASE'
 	compile 'org.springframework:spring-jdbc:3.2.9.RELEASE'
 	compile 'org.springframework:spring-orm:3.2.9.RELEASE'
+
+	compile 'javax.servlet:jstl:1.2'
 
 	providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
 
